--- a/02-templates/app/templates/index.html
+++ b/02-templates/app/templates/index.html
@@ -1,22 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  {% if title %}
-  <title>{{ title }} - Microblog</title>
-  {% else %}
-  <title>Welcome to Microblog</title>
-  {% endif %}
-</head>
-<body>
-  <h1>Hello {{ user.name }}!</h1>
-  <h2>Your shoe size is {{ user.shoe_size }}</h2>
+{% extends "base.html" %}
+
+{% block content %}
+  <h1>Hi, {{ user.name }}!</h1>
   {% for post in posts %}
-  <div>
-    <p><b>{{ post.author.username }}: </b>{{ post.body }}</p>
-  </div>
+  <div><p>{{ post.author.username }} says: <b>{{ post.body }}</b></p></div>
   {% endfor %}
-</body>
-</html>
+{% endblock %}
