Changed nav to list

--- a/03-webforms/app/templates/base.html
+++ b/03-webforms/app/templates/base.html
@@ -13,7 +13,13 @@
 </head>
 
 <body>
-  <div>Microblog: <a href="/index">Home</a></div>
+  <div>
+    <ul>
+      Microblog: 
+      <li><a href="/index">Home</a></li>
+      <li><a href="/login">Login</a></li>
+    </ul>
+  </div>
   <hr>
   {% block content %}{% endblock %}
 </body>
