--- a/03-webforms/app/templates/login.html
+++ b/03-webforms/app/templates/login.html
@@ -7,10 +7,16 @@
     {{ form.username.label }}
     <br> {{ form.username(size=32) }}
   </p>
+  {% for error in form.username.errors %}
+  <span style="color: red;">[{{ error }}]</span>
+  {% endfor %}
   <p>
     {{ form.password.label }}
     <br> {{ form.password(size=32) }}
   </p>
+  {% for error in form.password.errors %}
+  <span style="color: red;">[{{ error }}]</span>
+  {% endfor %}
   <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
   <p>{{ form.submit() }}</p>
 </form>
