--- a/05-user_logins/app/templates/nav.html
+++ b/05-user_logins/app/templates/nav.html
@@ -2,6 +2,10 @@
   <ul>
     Microblog: 
     <li><a href="{{ url_for('index') }}">Home</a></li>
+    {% if current_user.is_anonymous %}
     <li><a href="{{ url_for('login') }}">Login</a></li>
+    {% else %}
+    <li><a href="{{ url_for('logout') }}">Logout</a></li>
+    {% endif %}
   </ul>
 </div>
