--- a/05-user_logins/app/templates/index.html
+++ b/05-user_logins/app/templates/index.html
@@ -1,7 +1,11 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1>Hi, {{ user.name }}!</h1>
+  {% if current_user.is_anonymous %}
+  <h1>Hi there!</h1>
+  {% else %}
+  <h1>Hi, {{ current_user.username }}!</h1>
+  {% endif %}
   {% for post in posts %}
   <div><p>{{ post.author.username }} says: <b>{{ post.body }}</b></p></div>
   {% endfor %}
